--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
+<form name="form">
+    <label>
+        <input type="text" name="title" placeholder="title">
+    </label>
+    <button>save</button>
+</form>
+
+<hr>
+
+<div id="todos">
+
+</div>
 
 <script src="index.js"></script>
 
